--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,8 @@ PG_MAX_POOL_SIZE=10
 PG_URL=postgres://{user}:{password}@{host}:{port}/{database}
 
 # settings for docker postgresql
+PG_USER=postgres
+PG_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=1234
 POSTGRES_DB=postgres
